--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  margin: 10px;
+}
+
+.button{
+  font-size: medium;
+  font-weight: lighter;
+  padding: 6px 10px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .App-logo {
